--- a/src/proxy.config.json
+++ b/src/proxy.config.json
@@ -1,6 +1,6 @@
 {
     "/api/*": {
-        "target": "http://localhost:21757/",
+        "target": "http://localhost:21757",
         "secure": false
     }
 }
