--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
     "@cloudinary/angular-5.x": "^1.5.2",
+    "cloudinary-core": "^2.12.3",
     "ng2-file-upload": "^1.4.0",
+    "primeng": "^13.3.1",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
